--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Saurav's Portfolio</h1>
+    <h1 style="color: red;">
+        <center><b><u>
+            <font size="5" face="Times New Roman"></font><p>Saurav's Portfolio</p>
+            </b></u></center>
+    </h1>
     <hr />
 
-    <h2>I am new to Web Developing</h2>
-    <h3>Have a look at my previous work</h3>
-    <a href="Upsc.html"><img src="Gif.gif"/></a>
+    <h2> <center> <i>I am new to Web Developing</i></center></h2>
+    <h3><center>Have a look at my previous work</center></h3>
+    <center><a href="Upsc.html"><img src="Gif.gif"/></a></center>
     <p>Click on the image to visit the website</p>
     <P>Hope you like my work<br />Any type of comments and suggestions are welcome</P>
 
